--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,8 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env*.local
+.env.development.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
